# Music-Integration

./: README  README.md  autogen.sh  configure.ac  metadata.json  music-integration@brianrobles204  org.gnome.shell.extensions.musicintegration.gschema.xml
config/: .gitignore
music-integration@brianrobles204/: extension.js  metadata.json  music-int-pref.py  stylesheet.css
po/: LINGUAS  POTFILES.in  de.po  es.po  gl.po
src/: Makefile.am  extension.js  metadata.json.in  music-int-pref.py  org.gnome.shell.extensions.musicintegration.gschema.xml.in  stylesheet.css
